--- a/web/login/style.css
+++ b/web/login/style.css
@@ -9,7 +9,7 @@ input{
 }
 
 body{
-	background: #eeeeee url(images/bg.jpg) top left repeat;
+	background: #eeeeee url(../resource/images/bg.jpg) top left repeat;
 }
 
 #container{
@@ -25,7 +25,7 @@ body{
 }
 
 form{
-	background: url(images/form-bg.png) top left no-repeat;
+	background: url(../resource/images/form-bg.png) top left no-repeat;
 	width: 524px;
 	height: 262px;
 	padding-top: 1px;
@@ -59,11 +59,11 @@ form{
 	float: left;
 	margin-top: 10px;
 	margin-left: 35px;
-	background: url(images/username-field.png) center left no-repeat;
+	background: url(../resource/images/username-field.png) center left no-repeat;
 }
 
 .username-field:hover{
-	background: url(images/username-field-hover.png) center left no-repeat;
+	background: url(../resource/images/username-field-hover.png) center left no-repeat;
 }
 
 .password-field{
@@ -72,11 +72,11 @@ form{
 	float: left;
 	margin-top: 10px;
 	margin-left: 22px;
-	background: url(images/password-field.png) center left no-repeat;
+	background: url(../resource/images/password-field.png) center left no-repeat;
 }
 
 .password-field:hover{
-	background: url(images/password-field-hover.png) center left no-repeat;
+	background: url(../resource/images/password-field-hover.png) center left no-repeat;
 }
 
 input[type="text"], input[type="password"]{
@@ -104,19 +104,19 @@ input[type="checkbox"] + label{
 	display: block;
 	position: relative;
 	line-height: 24px;
-	background: url(images/checkbox-off.png) top left no-repeat;
+	background: url(../resource/images/checkbox-off.png) top left no-repeat;
 }
 
 input[type="checkbox"]:checked + label{
-	background: url(images/checkbox-on.png) top left no-repeat;
+	background: url(../resource/images/checkbox-on.png) top left no-repeat;
 }
 
 input[type="checkbox"]:checked:hover + label , input[type="checkbox"]:checked:focus + label{
-	background: url(images/checkbox-on-hover.png) top left no-repeat;
+	background: url(../resource/images/checkbox-on-hover.png) top left no-repeat;
 }
 
 input[type="checkbox"]:not(:checked):hover + label , input[type="checkbox"]:not(:checked):focus + label{
-	background: url(images/checkbox-off-hover.png) top left no-repeat;
+	background: url(../resource/images/checkbox-off-hover.png) top left no-repeat;
 }
 
 .forgot-usr-pwd{
@@ -150,7 +150,7 @@ input[type="submit"]{
 }
 
 input[type="submit"]:hover , input[type="submit"]:focus{
-	background: url(images/go-hover.png) top left no-repeat;
+	background: url(../resource/images/go-hover.png) top left no-repeat;
 }
 
 #footer{
@@ -158,7 +158,7 @@ input[type="submit"]:hover , input[type="submit"]:focus{
 	margin-top: 50px;
 	width: 500px;
 	height: 30px;
-	background: url(images/footer-bg.png) bottom center no-repeat;
+	background: url(../resource/images/footer-bg.png) bottom center no-repeat;
 	text-align: center;
 	font-family: "Times New Roman" , Times , Georgia;
 	font-weight: normal;
