--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/web"/>
         <property name="java-output-path" value="/shipagent-enterprise/target/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="shipagent-enterprise"/>
     </wb-module>
 </project-modules>
